<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/ggl_pixel"
            >
        </ImageView>

        <TextView
            style="@style/TextContent.Small.White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="#4D000000"
            android:drawablePadding="4dp"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/dummy_photos"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@android:color/white"
            >
        </TextView>
        </FrameLayout>

        
        <TextView
            style="@style/TextContent.Black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dummy_values"
            android:textSize="32sp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="8dp"

            >
        </TextView>

        <TextView
            style="@style/TextContent.Subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/stock"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            >
        </TextView>

        <TextView
            style="@style/TextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content_text"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:lineSpacingMultiplier="1"
            android:textColor="@color/black"
            android:textSize="14sp"
            >
        </TextView>

        <TextView
            style="@style/TextContent.Subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/specification"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="8dp"
            >
        </TextView>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            >
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                >
                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/display"
                    >
                </TextView>
                <TextView
                    style="@style/TextSpec.Value"
                    android:textSize="14sp"
                    android:text="@string/content_spech_display"
                    >
                </TextView>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                >
                <TextView
                    style="@style/TextSpec.Field"
                    android:textSize="14sp"
                    android:text="@string/size"
                    >
                </TextView>

                <TextView
                    style="@style/TextSpec.Value"
                    android:textSize="14sp"
                    android:text="@string/content_spech_size"
                    >
                </TextView>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                >
                <TextView
                    style="@style/TextSpec.Field"
                    android:textSize="14sp"
                    android:text="@string/battery"
                    >
                </TextView>

                <TextView
                    style="@style/TextSpec.Value"
                    android:textSize="14sp"
                    android:text="@string/content_spech_battery"
                    >
                </TextView>

            </TableRow>

        </TableLayout>
        <TextView
            style="@style/TextContent.Subtitle"
            android:text="@string/sold_by"
            android:textSize="12sp"
            android:layout_marginBottom="8dp"
            >
        </TextView>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            >
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/user_logos"
                android:layout_centerVertical="true"
                android:id="@+id/profile_image"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                >
            </de.hdodenhof.circleimageview.CircleImageView>
            <TextView
                style="@style/TextContent"
                android:text="@string/seller_name"
                android:layout_toRightOf="@id/profile_image"
                android:layout_toEndOf="@id/profile_image"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_centerVertical="true">
            </TextView>
        </RelativeLayout>
        
        <Button
            style="@style/ButtonGeneral"
            android:text="@string/buy">
        </Button>


    </LinearLayout>
</ScrollView>
